<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Widget.MaterialComponents.ChipGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".FiltersFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/filters_screen_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filters_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        app:singleLine="false"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gluten_free"
            style="@style/CustomChipStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:checkable="true"
            android:minHeight="48dp"
            android:text="@string/gluten_free"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:checkedIcon="@drawable/ic_baseline_check_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_lactose_free"
            style="@style/CustomChipStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:checkable="true"
            android:minHeight="48dp"
            android:text="@string/lactose_free"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:checkedIcon="@drawable/ic_baseline_check_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_vegan"
            style="@style/CustomChipStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:checkable="true"
            android:minHeight="48dp"
            android:text="@string/vegan"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:checkedIcon="@drawable/ic_baseline_check_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_vegetarian"
            style="@style/CustomChipStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:checkable="true"
            android:minHeight="48dp"
            android:text="@string/vegetarian"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:checkedIcon="@drawable/ic_baseline_check_24" />
    </com.google.android.material.chip.ChipGroup>

</androidx.appcompat.widget.LinearLayoutCompat>